css/style.css
/* ... */
.badge {
     font-weight: 500;
}

blockquote {
     margin: 20px 0 20px;
     padding: 30px;
}

button {
     border: 0;
     margin: 0;
     padding: 0;
     cursor: pointer;
}

.full {
     float: left;
     width: 100%;
}

.full {
     width: 100%;
     float: left;
     margin: 0;
     padding: 0;
}


/**-- heading section --**/


/*---------------------------- preloader area ----------------------------*/

.loader_bg {
     position: fixed;
     z-index: 9999999;
     background: var(--low-green)99;
     width: 100%;
     height: 100%;
}

.loader {
     height: 100%;
     width: 100%;
     position: absolute;
     left: 0;
     top: 0;
     display: flex;
     justify-content: center;
     align-items: center;
}

.loader img {
     width: 280px;
}


/*-- header area --*/


/*--------------------------------------------------------------------- top banner area ---------------------------------------------------------------------*/


/*-- navigation--*/

.navigation.navbar {
     float: right;
     padding-top: 10px !important;
     padding: 0;
}

.navigation.navbar-dark .navbar-nav .nav-link {
     padding: 7px 0px 27px 0px;
     margin: 0 22px;
     color: var(--low-blue);
     font-size: 16px;
     line-height: 20px;
     font-weight: 500;
     text-transform: uppercase;
     border-bottom: #647E6899 solid 3px;
}

.navigation.navbar-dark .navbar-nav .nav-link:focus,
.navigation.navbar-dark .navbar-nav .nav-link:hover {
     color: var(--high-blue);
     border-bottom: var(--high-blue) solid 3px;
}

.navigation.navbar-dark .navbar-nav .active>.nav-link,
.navigation.navbar-dark .navbar-nav .nav-link.active,
.navigation.navbar-dark .navbar-nav .nav-link.show,
.navigation.navbar-dark .navbar-nav .show>.nav-link {
     color: var(--high-blue);
     border-bottom: var(--high-blue) solid 3px;
}

.navbar-expand-md .navbar-nav {
     padding-right: 10px;
}

.header {
     width: 100%;
     height: 86px;
     padding: 15px 0px 15px 0px;
     background: #647E68;
     top: 0;
     position: fixed;
     z-index: 10;
     border-bottom: 1px solid #D8D8D8;
}


/** main_content **/

.main_content {
     margin-top: 86px;
     ;
}

/** banner section **/

.banner_main {
     position: relative;
}

.banner .carousel-indicators li {
     width: 20px;
     height: 20px;
     border-radius: 30px;
     background: #000;
}

.banner .carousel-indicators .active {
     background-color: var(--high-blue);
}

.booking_ocline {
     position: absolute;
     width: 100%;
     top: 50%;
     transform: translateY(-50%);
}

.book_room {
     background-color: #000000c7;
     padding: 30px 35px;
     border-left: var(--high-blue) solid 5px;
}

.book_room h1 {
     font-weight: 500;
     font-size: 30px;
     line-height: 30px;
     color: var(--high-blue);
     padding-bottom: 20px;
     text-transform: uppercase;
     text-align: center;
}

.book_now span {
     display: block;
     color: var(--high-blue);
     font-size: 18px;
     padding-bottom: 5px;
}

.book_now .online_book {
     width: 100%;
     height: 50px;
     border: #647E6899 solid 1px;
     background-color: transparent;
     color: #647E6899;
     padding: 0 10px;
     padding-right: 61px;
     margin-bottom: 25px;
     position: relative;
}

.date_cua {
     position: absolute;
     width: 29px;
     height: 29px;
     top: 48px;
     background-repeat: no-repeat;
     right: 30px;
}

.book_btn {
     background-color: var(--high-blue);
     max-width: 189px;
     width: 100%;
     margin: 0 auto;
     padding: 10px 0;
     border-radius: 50px;
     color: #647E6899;
     font-size: 20px;
     transition: ease-in 0.5s;
     display: block;
}

.book_btn:hover {
     background-color: #647E6899;
     color: var(--high-blue);
     transition: ease-in 0.5s;
}

.carousel-control-next,
.carousel-control-prev {
     display: none;
}

.carousel-indicators {
     right: inherit;
     bottom: 53px;
     margin-left: 9%;
     z-index: 9;
}


/** end banner section **/

.titlepage {
     text-align: center;
     padding-bottom: 40px;
}

.titlepage h2 {
     font-size: 25px;
     color: var(--high-blue);
     line-height: 45px;
     font-weight: bold;
     text-transform: uppercase;
     padding: 0;
}

.titlepage h2::before {
     position: absolute;
     content: "";
     background-color: var(--high-blue);
     width: 20px;
     height: 4px;
     transform: rotate(-36deg);
     margin-left: -10px;
}

.titlepage h2::after {
     position: absolute;
     content: "";
     background-color: var(--high-blue);
     width: 20px;
     height: 4px;
     transform: rotate(-36deg);
     bottom: 5px;
}

.d_flex {
     display: flex;
     align-items: center;
     flex-wrap: wrap;
}

.read_more {
     font-size: 17px;
     background-color: #121212;
     color: #647E6899;
     padding: 8px 0px;
     width: 100%;
     max-width: 144px;
     text-align: center;
     display: inline-block;
     transition: ease-in all 0.5s;
     font-weight: 500;
     border-radius: 30px;
}

.read_more:hover {
     background: var(--high-blue);
     color: #647E6899;
     transition: ease-in all 0.5s;
}

/** about section **/

.about {
     background-color: #D8D8D8;
     padding: 50px 0px 20px 0px;
}

.about .titlepage {
     text-align: center;
     padding-bottom: 0;
     width: 100%;
}

.about .titlepage h2 {
     margin-bottom: 35px;
}

.about .titlepage p {
     font-weight: 400;
     font-size: 17px;
     line-height: 28px;
     text-align: justify;
     color: var(--high-blue);
}

.about_img {
     margin-right: 40px;
     overflow: hidden;
}

.about_img figure {
     margin: 0;
}

.about_img figure img {
     width: 100%;
     transition: all .5s;
}

.about_img figure img:hover {
     transform: scale(1.2);
}

/** end about section **/

/** our_room section **/

.our_room {
     background-color: #647E6899;
     padding: 50px 0px;
}

.our_room .titlepage {
     text-align: center;
}
/* ... */

